// 指定proto语法,不写默认proto2
syntax = "proto3";

// 声明protobuf中的包名
package pod;

// 声明生成的go代码的导入路径
option go_package = "./proto/pod;pod";

// 对外暴露的服务
service Pod {
  rpc AddPod(RPodInfo) returns (ResponseMsg) {}
  rpc DeletePod(RequestPodID) returns (ResponseMsg) {}
  rpc QueryPodByID(RequestPodID) returns (RPodInfo) {}
  rpc UpdatePod(RPodInfo) returns (ResponseMsg) {}
  rpc QueryAllPods(RequestQueryAll) returns (ResponseAllPod) {}
}

// RPodInfo消息指定的字段
message RPodInfo {
  int64 id = 1;
  string pod_name = 2;
  string pod_namespace = 3;
  string pod_team_id = 4;
  float pod_cpu_min = 5;
  float pod_cpu_max = 6;
  int32 pod_replicas = 7;
  float pod_memory_min = 8;
  float pod_memory_max = 9;
  repeated PodPort pod_port = 10;
  repeated PodEnv pod_env = 11;
  string pod_pull_policy = 12;
  string pod_restart = 13;
  string pod_type = 14;
  string pod_image = 15;
}

message PodPort {
  int64 pod_id = 1;
  int32 container_port = 2;
  string protocol = 3;
}

message PodEnv {
  int64 pod_id = 1;
  string env_key = 2;
  string env_value = 3;
}

message RequestPodID {
  int64 id = 1;
}

message ResponseMsg {
  string msg = 1;
}

message RequestQueryAll {

}

message ResponseAllPod {
  repeated RPodInfo pod_info = 1;
}
