syntax = "proto3";

package volume;

option go_package = "./proto/volume;volume";

service Volume {
  rpc AddVolume(RVolumeInfo) returns (Response) {}
  rpc QueryVolumeByID(RequestVolumeID) returns (RVolumeInfo) {}
  rpc DeleteVolume(RequestVolumeID) returns (Response) {}
  rpc UpdateVolume(RVolumeInfo) returns (Response) {}
  rpc QueryAllVolume(RequestQueryAll) returns (ResponseAllVolume) {}
}

message RVolumeInfo {
  int64 id = 1;
  string volume_name = 2;
  string volume_namespace = 3;
  string volume_access_mode = 4;
  string volume_storage_class_name = 5;
  float volume_request = 6;
  string volume_persistent_volume_mode = 7;
}

message RequestVolumeID {
  int64 id = 1;
}

message RequestQueryAll {

}

message Response {
  string msg = 1;
}

message ResponseAllVolume {
  repeated RVolumeInfo volume_info = 1;
}